Fix notes sizing issue on mobile

--- a/public/tufte.css
+++ b/public/tufte.css
@@ -748,6 +748,11 @@ label.margin-toggle:not(.sidenote-number) {
 		width: 300px;
 	}
 
+	.class-grid a {
+		width: 300px;
+		height: 225px;
+	}
+
 }
 
 /* Some annoying phones in landscape */
